--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "@supabase/supabase-js": "^2.43.4",
+    "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
     "localforage-cordovasqlitedriver": "^1.8.0",
     "rxjs": "~7.8.0",
