--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "^6.0.0",
+    "@capacitor/core": "6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/screen-orientation": "^6.0.0",
@@ -30,11 +31,14 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "@supabase/supabase-js": "^2.43.4",
+    "cordova-plugin-actionsheet": "^2.3.3",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
     "localforage-cordovasqlitedriver": "^1.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^5.0.6",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
